# PerikymataPhylogenetics

./: .gitignore  README.md
scripts/BURL/: CMakeLists.txt  GR_helper.sh  Mcmc.cpp  Mcmc.hpp  MetropolisCoupledMcmc.cpp  MetropolisCoupledMcmc.hpp  MultivariateBrownianMotionV2.cpp  MultivariateBrownianMotionV2.hpp  ParameterIntraspecificMean.cpp  ParameterIntraspecificMean.hpp  ParameterIntraspecificVarianceGibbs.cpp  ParameterIntraspecificVarianceGibbs.hpp  PerikymataHSPv4.cpp  PerikymataHSPv4.hpp  PhylogeneticModel.cpp  PhylogeneticModel.hpp  Probability.cpp  RandomVariable.cpp  TipModelV2.cpp  TipModelV2.hpp  main.cpp
scripts/BURL/BURL/: Mcmc.cpp  MetropolisCoupledMcmc.cpp  MetropolisCoupledMcmc.hpp  MultivariateBrownianMotionV2.cpp  MultivariateBrownianMotionV2.hpp  Node.cpp  Node.hpp  Parameter.hpp  ParameterDouble.cpp  ParameterDouble.hpp  ParameterIntraspecificMean.cpp  ParameterIntraspecificVarianceGibbs.cpp  ParameterIntraspecificVarianceGibbs.hpp  ParameterMatrix.hpp  PerikymataHSPv4.cpp  PerikymataHSPv4.hpp  RandomVariable.cpp  TipModelV2.cpp  TipModelV2.hpp  UserSettings.cpp  UserSettings.hpp  main.cpp
scripts/BURL/BURL.xcodeproj/: project.pbxproj
scripts/BURL_coverage/BURL_coverage/: CMakeLists.txt  coverageCheck.sh  coverageCheckMoreObs.sh
scripts/BURL_coverage/BURL_coverage/BURL_coverage/: Mcmc.cpp  MetropolisCoupledMcmc.cpp  MultivariateBrownianMotionV2.cpp  MultivariateBrownianMotionV2.hpp  ParameterIntraspecificMean.cpp  ParameterIntraspecificMean.hpp  ParameterIntraspecificVarianceGibbs.cpp  ParameterMatrix.cpp  main.cpp  (+9 more)
scripts/BURL_coverage/BURL_coverage/BURL_coverage.xcodeproj/: project.pbxproj
(+95 files in other folders)
